# quantseed

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SOP.md  pyproject.toml
.trae/skills/quantseed-sop/: SKILL.md
docs/: api.md  data-sources.md
examples/demo_strategy/: README.md  config.json  prepare_data.py  strategy.py
examples/dual_ma_strategy/: README.md  config.json  prepare_data.py  run_backtest.py  strategy.py
quantseed/: __init__.py  cli.py  config.py  equity_tracker.py  scheduler.py  state_store.py  strategy_base.py  trading.py
quantseed/backtest/: __init__.py  engine.py  metrics.py
quantseed/data/: __init__.py  akshare_provider.py  interface.py  sqlite_provider.py  tushare_provider.py
scripts/: smoke_demo.py
tests/: conftest.py  test_backtest.py  test_config.py  test_equity_tracker.py  test_sqlite_provider.py  test_state_store.py
