[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantseed"
version = "0.1.6"
description = "个人量化从零到一启动包：SOP 方法论 + 多策略框架 + 多数据源"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "superjohnnyshen", email = "superjohnnyshen@users.noreply.github.com"}
]
keywords = ["quantitative", "trading", "backtest", "qmt", "a-share", "quantseed"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "pandas>=1.3",
    "numpy>=1.20",
]

[project.urls]
Homepage = "https://github.com/superjohnnyshen/quantseed"
Repository = "https://github.com/superjohnnyshen/quantseed"
Issues = "https://github.com/superjohnnyshen/quantseed/issues"

[project.optional-dependencies]
qmt = ["xtquant"]
tushare = ["tushare"]
akshare = ["akshare"]
all = ["quantseed[qmt,tushare,akshare]"]
dev = ["pytest>=7.0"]

[project.scripts]
quantseed = "quantseed.cli:main"

[tool.setuptools.packages.find]
include = ["quantseed*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]